WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62462
REGRESSION: Fullscreen video controller can't be dragged
https://bugs.webkit.org/show_bug.cgi?id=62462
Summary
REGRESSION: Fullscreen video controller can't be dragged
Darin Adler
Reported
2011-06-10 09:33:20 PDT
REGRESSION: Fullscreen video controller can't be dragged
Attachments
Patch
(8.11 KB, patch)
2011-06-10 09:37 PDT
,
Darin Adler
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-06-10 09:37:22 PDT
Created
attachment 96750
[details]
Patch
Darin Adler
Comment 2
2011-06-10 09:38:01 PDT
<
rdar://problem/9581440
>
Darin Adler
Comment 3
2011-06-10 10:05:36 PDT
Committed
r88546
: <
http://trac.webkit.org/changeset/88546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug